products-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
spec:
  selector:
    app: products-api
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
