stock-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-api
spec:
  selector:
    app: stock-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
